WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189222
[Cocoa] Crash using KVO for 'serverTrust' property of WKWebView - "this class is not key value coding-compliant for the key serverTrust"
https://bugs.webkit.org/show_bug.cgi?id=189222
Summary
[Cocoa] Crash using KVO for 'serverTrust' property of WKWebView - "this class...
mitz
Reported
2018-09-01 15:55:35 PDT
<
rdar://problem/33283179
> WKWebView.h says that the class is key-value observing (KVO) compliant for the serverTrust property, and the implementation correctly reports changes to the property’s value, but it fails to make the property key value coding-complaint, so trying to get it using -valueForKey: either directly or as a side-effect of using specifying NSKeyValueObservingOptionNew or NSKeyValueObservingOptionOld results in an exception. Patch forthcoming.
Attachments
Override -valueForUndefinedKey: to handle "serverTrust"
(8.08 KB, patch)
2018-09-01 16:02 PDT
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2018-09-01 16:02:32 PDT
Created
attachment 348719
[details]
Override -valueForUndefinedKey: to handle "serverTrust"
mitz
Comment 2
2018-09-01 16:14:43 PDT
Fixed in <
https://trac.webkit.org/r235584
>.
Simon Fraser (smfr)
Comment 3
2019-12-06 13:48:43 PST
Comment on
attachment 348719
[details]
Override -valueForUndefinedKey: to handle "serverTrust" View in context:
https://bugs.webkit.org/attachment.cgi?id=348719&action=review
> Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:823 > +- (id)valueForUndefinedKey:(NSString *)key {
{ on new line please.
mitz
Comment 4
2019-12-06 14:08:09 PST
(In reply to Simon Fraser (smfr) from
comment #3
)
> Comment on
attachment 348719
[details]
> Override -valueForUndefinedKey: to handle "serverTrust" > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=348719&action=review
> > > Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:823 > > +- (id)valueForUndefinedKey:(NSString *)key { > > { on new line please.
Fixed in
r253216
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug