[Cocoa] Crash using KVO for 'serverTrust' property of WKWebView - "this class is not key value coding-compliant for the key serverTrust" https://bugs.webkit.org/show_bug.cgi?id=189222 <rdar://problem/33283179>

Reviewed by Sam Weinig.

Source/WebKit:

Test: TestWebKitAPI/Tests/WebKitCocoa/WKWebViewServerTrustKVC.mm

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView valueForUndefinedKey:]): Override to handle the "serverTrust" key, which is not
  handled automatically by the KVC machinery since the getter’s return type is not an
  Objective-C type.

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/WKWebViewServerTrustKVC.mm: Added.
(TEST):



Canonical link: https://commits.webkit.org/204230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235584 268f45cc-cd09-0410-ab3c-d52691b4dbfc